flux/infrastructure/micro/services/status-page/service.yaml
# Auto-split from cluster files
apiVersion: v1
kind: Service
metadata:
  name: status-page
  namespace: micro
spec:
  selector:
    app: status-page
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
